syntax = "proto3";

option java_package = "server"; 
option java_outer_classname = "GreetProto";

package greet;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}