syntax = "proto3";

option java_package = "server"; 
option java_outer_classname = "UserProto";

package user;

service UserGrpcService {
  rpc GetUserGrpc (RequestId) returns (UserGrpc);
  rpc GetAllUserGrpc (Empty) returns (UserList); 
}

// Objeto a traves de Protocol Buffers
message UserGrpc {
  int32 id = 1;
  string name = 2;
}

// Para traer al cliente
message RequestId {
  int32 id = 1;
}

message Empty {}

message UserList {
  repeated UserGrpc users = 1;
}